--- a/src/styles.css
+++ b/src/styles.css
@@ -1,24 +1,37 @@
-.card{
-  border:none;
-}
-.card-text{
-  min-height: 6em;
-}
-.card-deck{
-  margin-bottom:10em;
-}
-.btn_card{
-  width:10em;
+/* global css*/
+
+body {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
-.calendar{
-  height: 50px;
-  width:50px;
+.container {
+  flex: 1;
+}
+
+.lead {
+  font-size: 1.2em;
 }
 
 footer {
-  position: absolute;
-  width: 100%;
   height: 60px;
-  background-color: #f5f5f5;
+}
+
+/* index.html css*/
+.index_card {
+  border: none;
+}
+
+.index_text {
+  min-height: 8em;
+}
+
+.index_btn_card {
+  width: 10em;
+}
+
+.calendar {
+  height: 50px;
+  width: 50px;
 }
