--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,5 @@
 <app-navbar></app-navbar>
 
-<app-jumbotron></app-jumbotron>
-
-<!-- cards -->
-
-<div class="container">
-  <app-eventcard></app-eventcard>
-</div>
+<router-outlet></router-outlet>
 
 <app-footer></app-footer>
