--- a/src/app/ticket/bid/bid.component.html
+++ b/src/app/ticket/bid/bid.component.html
@@ -1,3 +1,12 @@
+<div class="row">
+  <div class="col-sm order-md-2">
+    <ng-container *ngIf="ticket">
+      <app-eventcard [esemeny]="ticket.event" nextLabel="Esemény megtekintése"></app-eventcard>
+    </ng-container>
+  </div>
+  <div class="col-sm-12 col-md-8"></div>
+</div>
+
 <div class="container py-3">
 
   <div class="row justify-content-center">
