--- a/src/app/ticket/bid/bid.component.html
+++ b/src/app/ticket/bid/bid.component.html
@@ -8,7 +8,7 @@
 
         <app-ticket-details-card [ticket]="ticket"></app-ticket-details-card>
 
-        <app-bidding-card [ticket]="ticket"></app-bidding-card>
+        <app-bidding-card [isLoggedIn]="isLoggedIn" [ticket]="ticket" (bidWithBidStep)="onBidWithBidStep()"></app-bidding-card>
 
       </div>
     </ng-container>
