--- a/src/app/ticket/ticket-details-card/ticket-details-card.component.html
+++ b/src/app/ticket/ticket-details-card/ticket-details-card.component.html
@@ -2,19 +2,19 @@
   <div class="card-body">
     <h4 class="card-title">Jegy adatai</h4>
     <div class="row">
-      <div class="col-sm-12 col-md-3">Eladó neve:</div>
+      <div class="col-sm-12 col-md-3 label-row">Eladó neve:</div>
       <div class="col-sm-12 col-md-9">{{ticket.seller.name}}</div>
     </div>
     <div class="row">
-      <div class="col-sm-12 col-md-3">Darabszám:</div>
+      <div class="col-sm-12 col-md-3 label-row">Darabszám:</div>
       <div class="col-sm-12 col-md-9">{{ticket.numberOfTickets}} db</div>
     </div>
     <div class="row">
-      <div class="col-sm-12 col-md-3">Érvényesség:</div>
-      <div class="col-sm-12 col-md-9">{{ticket.date}}</div>
+      <div class="col-sm-12 col-md-3 label-row">Érvényesség:</div>
+      <div class="col-sm-12 col-md-9">{{ticket.bidEndDate | amFromUnix | amDateFormat: 'LLL'}}</div>
     </div>
     <div class="row">
-      <div class="col-12"><p class="mt-2">lorem ...</p></div>
+      <div class="col-12"><p class="mt-2">{{ticket.details}}</p></div>
     </div>
   </div>
 </div>
