--- a/src/app/ticket/bid/bid.component.html
+++ b/src/app/ticket/bid/bid.component.html
@@ -1,17 +1,22 @@
-<div class="container py-3">
-  <div class="row">
-    <ng-container *ngIf="ticket">
-      <div class="col-sm order-md-2">
-        <app-eventcard [esemeny]="ticket.event" nextLabel="Esemény megtekintése"></app-eventcard>
-      </div>
-      <div class="col-sm-12 col-md-8 mt-2 mt-sm-0">
+<ng-container *ngIf="ticket != null; else loading">
+  <div class="container py-3">
+    <div class="row">
+      <ng-container *ngIf="ticket">
+        <div class="col-sm order-md-2">
+          <app-eventcard [esemeny]="ticket.event" nextLabel="Esemény megtekintése"></app-eventcard>
+        </div>
+        <div class="col-sm-12 col-md-8 mt-2 mt-sm-0">
 
-        <app-ticket-details-card [ticket]="ticket"></app-ticket-details-card>
+          <app-ticket-details-card [ticket]="ticket"></app-ticket-details-card>
 
-        <app-bidding-card [isLoggedIn]="isLoggedIn" [ticket]="ticket" (bidWithBidStep)="onBidWithBidStep()"></app-bidding-card>
+          <app-bidding-card [isLoggedIn]="isLoggedIn" [ticket]="ticket"
+                            (bidWithBidStep)="onBidWithBidStep()"></app-bidding-card>
 
-      </div>
-    </ng-container>
+        </div>
+      </ng-container>
+    </div>
   </div>
-
-</div>
+</ng-container>
+<ng-template #loading>
+  <app-loading-spinner></app-loading-spinner>
+</ng-template>
