--- a/src/app/ticket/bid-form/bid-form.component.html
+++ b/src/app/ticket/bid-form/bid-form.component.html
@@ -10,12 +10,28 @@
 </div>
 
 <ng-template #bidWithValue>
-  <div class="row">
-    <div class="col-6">
-      <input type="number" class="form-control" placeholder="Add meg a licitértékedet">
+  <form [formGroup]="form" (ngSubmit)="onSubmit()">
+    <div class="row">
+      <div class="col-6">
+        <input
+          [ngClass]="{'is-invalid': submitted && form.get('bid').invalid}"
+          formControlName="bid"
+          type="number"
+          class="form-control"
+          placeholder="Add meg a licitértékedet"/>
+        <div class="invalid-feedback" *ngIf="form.get('bid').hasError('required')">
+          Kötelező megadni az értéket!
+        </div>
+        <div class="invalid-feedback" *ngIf="form.get('bid').hasError('validateMinimumBid')">
+          Minimum licit értéke.: {{ticket.currentBid + ticket.bidStep}}
+        </div>
+      </div>
+      <div class="col-6">
+        <button type="submit" class="btn btn-primary text-light" role="button">Licitálok</button>
+      </div>
     </div>
-    <div class="col-6">
-      <button class="btn btn-primary text-light" role="button">Licitálok</button>
-    </div>
-  </div>
+  </form>
 </ng-template>
+
+{{form.value | json}}
+{{form.get('bid').errors | json}}
