--- a/src/app/ticket/bid/bid.component.html
+++ b/src/app/ticket/bid/bid.component.html
@@ -10,7 +10,7 @@
           <app-ticket-details-card [ticket]="ticket"></app-ticket-details-card>
 
           <app-bidding-card [isLoggedIn]="isLoggedIn" [ticket]="ticket"
-                            (bidWithBidStep)="onBidWithBidStep()"></app-bidding-card>
+                            (refreshTicket)="onRefreshTicket()"></app-bidding-card>
 
         </div>
       </ng-container>
