--- a/src/app/core/loading-spinner/loading-spinner.component.css
+++ b/src/app/core/loading-spinner/loading-spinner.component.css
@@ -1,8 +1,10 @@
+:host {
+  display: block;
+}
+
 .loader {
   border: 16px solid #f3f3f3; /* Light grey */
   border-radius: 50%;
-  width: 120px;
-  height: 120px;
   animation: spin 2s linear infinite;
   border-top: 16px solid blue;
   border-bottom: 16px solid blue;
