--- a/src/app/ticket/bid-form/bid-form.component.html
+++ b/src/app/ticket/bid-form/bid-form.component.html
@@ -8,10 +8,17 @@
 
 <div class="row" *ngIf="displayBidStep; else bidWithValue">
   <div class="col-12">
-    <button [disabled]="disabled" class="btn btn-primary text-light" (click)="onBidWithBidStep()">Licit a következő
-      legkisebb licittel:
-      {{ticket.currentBid+ticket.bidStep}} Ft
-    </button>
+    <div class="row">
+      <div class="col">
+        <button [disabled]="disabled" class="btn btn-primary text-light" (click)="onBidWithBidStep()">Licit a következő
+          legkisebb licittel:
+          {{ticket.currentBid+ticket.bidStep}} Ft
+        </button>
+      </div>
+      <div class="col" *ngIf="disabled">
+        <app-loading-spinner [loaderWidth]="35" [loaderHeight]="35"></app-loading-spinner>
+      </div>
+    </div>
   </div>
 
   <div class="col-12">
@@ -30,19 +37,21 @@
           type="number"
           class="form-control"
           placeholder="Add meg a licitértékedet"/>
-        <div class="invalid-feedback" *ngIf="form.get('bid').hasError('required')">
+        <div class="invalid-feedback" *ngIf="form.get('bid')!.hasError('required')">
           Kötelező megadni az értéket!
         </div>
-        <div class="invalid-feedback" *ngIf="form.get('bid').hasError('validateMinimumBid')">
+        <div class="invalid-feedback" *ngIf="form.get('bid')!.hasError('validateMinimumBid')">
           Minimum licit értéke.: {{ticket.currentBid + ticket.bidStep}}
         </div>
       </div>
       <div class="col-6">
-        <button type="submit" class="btn btn-primary text-light" role="button" [disabled]="disabled">Licitálok</button>
+        <button *ngIf="!disabled;else loadingSubmit" type="submit" class="btn btn-primary text-light" role="button"
+                [disabled]="disabled">Licitálok
+        </button>
+        <ng-template #loadingSubmit>
+          <app-loading-spinner [loaderHeight]="30" [loaderWidth]="30"></app-loading-spinner>
+        </ng-template>
       </div>
     </div>
   </form>
 </ng-template>
-
-{{form.value | json}}
-{{form.get('bid').errors | json}}
