--- a/src/app/ticket/bid/bid.component.html
+++ b/src/app/ticket/bid/bid.component.html
@@ -7,9 +7,9 @@
         </div>
         <div class="col-sm-12 col-md-8 mt-2 mt-sm-0">
 
-          <app-ticket-details-card [ticket]="ticket"></app-ticket-details-card>
+          <app-ticket-details-card [loading]="progressRefeshTicket" [ticket]="ticket"></app-ticket-details-card>
 
-          <app-bidding-card [isLoggedIn]="isLoggedIn" [ticket]="ticket"
+          <app-bidding-card [loading]="progressRefeshTicket" [isLoggedIn]="isLoggedIn" [ticket]="ticket"
                             (refreshTicket)="onRefreshTicket()"></app-bidding-card>
 
         </div>
