--- a/src/app/ticket/bidding-card/bidding-card.component.html
+++ b/src/app/ticket/bidding-card/bidding-card.component.html
@@ -1,6 +1,6 @@
 <div class="card mt-2">
   <div class="card-body">
-    <h4 class="card-title">Licit adatok</h4>
+    <h4 class="card-title">Licit adatok <app-loading-spinner *ngIf="loading" class="float-right" [loaderHeight]="20" [loaderWidth]="20"></app-loading-spinner></h4>
     <table class="table">
       <tbody>
       <tr>
