--- a/src/app/event/event-list/event-list.component.html
+++ b/src/app/event/event-list/event-list.component.html
@@ -8,7 +8,7 @@
     </form>
   </div>
 
-  <div class="my-2 my-lg-0 text-center" *ngIf="userService.isLoggedin">
+  <div class="my-2 my-lg-0 text-center" *ngIf="userService.isLoggedin$ | async">
     <div>
       <label>Eseményt szeretnék létrehozni</label>
     </div>
