--- a/src/app/ticket/bid/bid.component.html
+++ b/src/app/ticket/bid/bid.component.html
@@ -9,7 +9,7 @@
 
           <app-ticket-details-card [loading]="progressRefeshTicket" [ticket]="ticket"></app-ticket-details-card>
 
-          <app-bidding-card [loading]="progressRefeshTicket" [isLoggedIn]="isLoggedIn" [ticket]="ticket"
+          <app-bidding-card [loading]="progressRefeshTicket" [isLoggedIn]="isLoggedIn$ | async" [ticket]="ticket"
                             (refreshTicket)="onRefreshTicket()"></app-bidding-card>
 
         </div>
