--- a/src/app/user/profile/profile.component.html
+++ b/src/app/user/profile/profile.component.html
@@ -47,7 +47,7 @@
           </a>
         </div>
       </ng-container>
-      <ng-template>
+      <ng-template #loader>
         <app-loading-spinner></app-loading-spinner>
       </ng-template>
     </div>
