--- a/src/app/ticket/bid/bid.component.html
+++ b/src/app/ticket/bid/bid.component.html
@@ -1,19 +1,16 @@
-<ng-container *ngIf="ticket != null; else loading">
+<ng-container *ngIf="(ticket$ | async) as ticket; else loading">
   <div class="container py-3">
     <div class="row">
-      <ng-container *ngIf="ticket">
-        <div class="col-sm order-md-2">
-          <app-eventcard [esemeny]="ticket.event" nextLabel="Esemény megtekintése"></app-eventcard>
-        </div>
-        <div class="col-sm-12 col-md-8 mt-2 mt-sm-0">
+      <div class="col-sm order-md-2">
+        <app-eventcard [esemeny]="ticket.event" nextLabel="Esemény megtekintése"></app-eventcard>
+      </div>
+      <div class="col-sm-12 col-md-8 mt-2 mt-sm-0">
 
-          <app-ticket-details-card [loading]="progressRefeshTicket" [ticket]="ticket"></app-ticket-details-card>
+        <app-ticket-details-card [loading]="progressRefeshTicket" [ticket]="ticket"></app-ticket-details-card>
 
-          <app-bidding-card [loading]="progressRefeshTicket" [isLoggedIn]="isLoggedIn$ | async" [ticket]="ticket"
-                            (refreshTicket)="onRefreshTicket()"></app-bidding-card>
-
-        </div>
-      </ng-container>
+        <app-bidding-card [loading]="progressRefeshTicket" [isLoggedIn]="isLoggedIn$ | async"
+                          [ticket]="ticket"></app-bidding-card>
+      </div>
     </div>
   </div>
 </ng-container>
